# text-analyzer-backend

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.cli  README.md  THIRD_PARTY_NOTICES.md  compile_commands.json  docker-compose.yml  requirements.txt
data/: stopwords_de.txt
src/api/: main.c
src/app/: analyze.c  analyze.h  pipeline_id.c  pipeline_id.h  pipeline_string.c  pipeline_string.h
src/cli/: batch.c  batch.h  main.c
src/core/: aggregate.c  aggregate.h  bigram_aggregate.c  bigram_aggregate.h  bigrams.c  bigrams.h  dict.c  dict.h  freq.c  freq.h  id_bigrams.c  id_bigrams.h  id_freq.c  id_freq.h  metrics.c  stopwords.c  stopwords.h  tokenizer.c  tokenizer.h  topk.c  topk.h
src/input/: request_validate.c  request_validate.h
src/metrics/: metrics.c  metrics.h
src/view/: topk.c  topk.h
tests/: test_aggregate.c  test_bigrams.c  test_tokenizer.c  test_topk.c
tests/api/expected/: g1.response.json  g2.response.json  g3.response.json  g4.response.json  g5.response.json
tests/api/requests/: g1.json  g2.json  g3.json  g4.json  g5.json
tests/api/scripts/: regen_expected.sh  run_api_tests.sh
tests/error/: README.md  manifest.json
tests/error/data/: DIFF_api_too_many_pages_101.json  ERR_invalid_json_trailing_comma.json  ERR_invalid_utf8_bytes.json  ERR_not_json.txt  ERR_object_missing_pages.json  ERR_page_missing_text.json  ERR_page_not_object.json  ERR_pages_not_array.json  ERR_text_not_string.json  ERR_whitespace_only.json  GAP_id_float_becomes_zero.json  GAP_missing_id_name_url.json  GAP_url_not_string.json  OK_minimal.json  OK_root_array_cli_only.json  OK_unicode.json
tests/error/results/: summary.txt
tests/error/scripts/: gen_big_payload_over_10mb.sh  run_suite.sh
tests/performance/data/large/: p6.json  p7.json  p8.json  p9.json
tests/performance/data/medium/: p3.json  p4.json  p5.json
tests/performance/data/small/: g3.json  g4.json  p1.json  p2.json
tests/performance/scripts/: run_api_prod_avg5.sh  run_api_prod_concurrency.sh  run_perf_api_baseline_and_delta.sh  run_perf_api_concurrency.sh  run_perf_cli_topk_k20_id.sh  run_perf_tests.sh  run_perf_tests_dual_pipelines.sh  run_perf_tests_dual_pipelines_mem.sh  run_perf_topk_measure.sh
tests/stress/data/multi-page/: make_multi_stages_to_500mb.zsh  stress_multi10_BASE_BIGRAM_KILLER.json  stress_multi10_BASE_NATURAL.json  stress_multi10_BASE_REPEAT.json  stress_multi10_BASE_UNIQUE.json
tests/stress/data/single-page/: make_single_stages_to_500mb.zsh  stress_single_BASE_BIGRAM_KILLER.json  stress_single_BASE_NATURAL.json  stress_single_BASE_REPEAT.json  stress_single_BASE_UNIQUE.json
tests/stress/scripts/: run_stress_cli_multi_page.sh  run_stress_cli_single_page.sh  run_stress_common.sh
tests/unit/: test_bigram_aggregate.c  test_bigrams.c  test_pipeline_force.c  test_pipeline_parity.c  test_request_validate.c  test_tokenizer.c  test_topk.c
